--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Free Bootstrap 5 HTML Template
                                     </button>
 
                                     <button class="nav-link" id="nav-video-tab" data-bs-toggle="tab" data-bs-target="#nav-video" type="button" role="tab" aria-controls="nav-video" aria-selected="false">
-                                        <h3>Date Delivery </h3>
+                                        <h3>Data Delivery </h3>
                                         
                                         <span>We deliver data on different time intervals based on client requirements</span>
                                     </button>
