--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@ Free Bootstrap 5 HTML Template
                             <nav>
                                 <div class="nav nav-tabs flex-column align-items-baseline" id="nav-tab" role="tablist">
                                     <button class="nav-link active" id="nav-business-tab" data-bs-toggle="tab" data-bs-target="#nav-business" type="button" role="tab" aria-controls="nav-business" aria-selected="true">
-                                        <h3>Scraping</h3>
+                                        <h3>Data Extraction</h3>
 
-                                        <span>We do custom scraping based on requirements </span>
+                                        <span>We do custom Data Extraction based on requirements </span>
                                     </button>
 
                                     <button class="nav-link" id="nav-strategy-tab" data-bs-toggle="tab" data-bs-target="#nav-strategy" type="button" role="tab" aria-controls="nav-strategy" aria-selected="false">
@@ -215,9 +215,9 @@ Free Bootstrap 5 HTML Template
                                 <div class="tab-pane fade show active" id="nav-business" role="tabpanel" aria-labelledby="nav-intro-tab">
                                     <img src="images/services/young-entrepreneurs-mature-investor-watching-presentation-discussing-project.jpg" class="img-fluid" alt="">
 
-                                    <h5 class="mt-4 mb-2">Introduction to Scraping</h5>
+                                    <h5 class="mt-4 mb-2">Introduction to Data Extraction</h5>
 
-                                    <p>We do scraping on large scale on apps and websites around the world , we scrape accurate data </p>
+                                    <p>We do Data Extraction on large scale on apps and websites around the world , we scrape accurate data </p>
                                 </div>
 
                                 <div class="tab-pane fade show" id="nav-strategy" role="tabpanel" aria-labelledby="nav-strategy-tab">
