--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta name="description" content="">
-        <meta name="author" content="Skywalker">
+        <meta name="author" content="thenX">
 
-        <title>Skywalker</title>
+        <title>thenX</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,7 +65,7 @@ Free Bootstrap 5 HTML Template
         <nav class="navbar navbar-expand-lg bg-white shadow-lg">
             <div class="container">
 
-                <a href="#" class="navbar-brand">Sky <span class="text-danger">Walker</span></a>
+                <a href="#" class="navbar-brand">then <span class="text-danger">X</span></a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -105,9 +105,9 @@ Free Bootstrap 5 HTML Template
                                 <div class="carousel-item active">
                                     <div class="container position-relative h-100">
                                         <div class="carousel-caption d-flex flex-column justify-content-center">
-                                            <small class="small-title">Introducing Skywalker </small>
+                                            <small class="small-title">Introducing thenX </small>
                                             <!-- <span class="text-warning">new ideas</span> -->
-                                            <h1>Top-performing retailers and brands use Skywalker pricing data, trends and insights to make <span class="text-warning">smart decisions</span> and increase revenues every second</h1>
+                                            <h1>Top-performing retailers and brands use thenX pricing data, trends and insights to make <span class="text-warning">smart decisions</span> and increase revenues every second</h1>
 
                                         </div>
                                     </div>
@@ -135,7 +135,7 @@ Free Bootstrap 5 HTML Template
                                 <div class="about-image-info">
                                     <h4 class="text-white">Anuridh, CEO</h4>
 
-                                    <p class="text-white mb-0">You can  use Skywalker data to make way for profits. Thank you for visiting Skywalker.</p>
+                                    <p class="text-white mb-0">You can  use thenX data to make way for profits. Thank you for visiting thenX.</p>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +146,7 @@ Free Bootstrap 5 HTML Template
                                 <div class="about-info">
                                     <small class="small-title">About </small>
 
-                                    <h2 class="mb-3">Skywalker</h2>
+                                    <h2 class="mb-3">thenX</h2>
 
                                     <h5 class="mb-3">Helping brands and vendors since 2021</h5>
 
