--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Free Bootstrap 5 HTML Template
                                         <div class="carousel-caption d-flex flex-column justify-content-center">
                                             <small class="small-title">Introducing thenX </small>
                                             <!-- <span class="text-warning">new ideas</span> -->
-                                            <h1>Top-performing retailers and brands use thenX pricing data, trends and insights to make <span class="text-warning">smart decisions</span> and increase revenues every second</h1>
+                                            <h2>Top-performing retailers and brands use thenX pricing data, trends and insights to make <span class="text-warning">smart decisions</span> and increase revenues every second</h2>
 
                                         </div>
                                     </div>
@@ -266,7 +266,7 @@ Free Bootstrap 5 HTML Template
                                         </div>
 
                                         <div class="col-lg-6 col-md-6 col-12">         
-                                            <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="your@company.com" required="">
+                                            <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="info.thenX.in" required="">
                                         </div>
 
                                         <div class="col-12">
