--- a/index.html
+++ b/index.html
@@ -49,15 +49,6 @@ Free Bootstrap 5 HTML Template
                         </p>
                     </div>
 
-                    <div class="col-lg-2 col-md-3 col-5">
-                        <p class="text-white mb-0">
-                            <a href="tel: 240-480-9600" class="text-white">
-                                <i class="bi-telephone site-header-icon me-2"></i>
-                                Contact Number
-                            </a>
-                        </p>
-                    </div>
-
                 </div>
             </div>
         </header>
@@ -65,7 +56,7 @@ Free Bootstrap 5 HTML Template
         <nav class="navbar navbar-expand-lg bg-white shadow-lg">
             <div class="container">
 
-                <a href="#" class="navbar-brand">then <span class="text-danger">X</span></a>
+                <a href="#" class="navbar-brand">then<span class="text-danger">X</span></a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -107,7 +98,7 @@ Free Bootstrap 5 HTML Template
                                         <div class="carousel-caption d-flex flex-column justify-content-center">
                                             <small class="small-title">Introducing thenX </small>
                                             <!-- <span class="text-warning">new ideas</span> -->
-                                            <h2>Top-performing retailers and brands use thenX pricing data, trends and insights to make <span class="text-warning">smart decisions</span> and increase revenues every second</h2>
+                                            <h2 style="color: white;">Top-performing retailers and brands use  <span class="text-warning">then<span class="text-danger">X</span></span> pricing data, trends and insights to make <span class="text-warning">smart decisions</span> and increase revenues every second</h2>
 
                                         </div>
                                     </div>
@@ -266,7 +257,7 @@ Free Bootstrap 5 HTML Template
                                         </div>
 
                                         <div class="col-lg-6 col-md-6 col-12">         
-                                            <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="info.thenX.in" required="">
+                                            <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="example@gmail.com" required="">
                                         </div>
 
                                         <div class="col-12">
@@ -283,19 +274,13 @@ Free Bootstrap 5 HTML Template
                                 <div class="contact-thumb">
                                     
                                     <div class="contact-info bg-white shadow-lg">
-                                        <h4 class="mb-4">HSR Layout,Banglore</h4>
+                                        <h4 class="mb-4">HSR Layout, Banglaore</h4>
 
-                                        <h4 class="mb-2">
-                                            <a href="tel: ">
-                                                <i class="bi-telephone contact-icon me-2"></i>
-                                                Contact Number
-                                            </a>
-                                        </h4>
 
                                         <h5>
                                             <a href="mailto:info@company.com" class="footer-link">
                                                 <i class="bi-envelope-fill contact-icon me-2"></i>
-                                                info@company.com
+                                                info@thenx.com
                                             </a>
                                         </h5>
                                         
