--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@ Free Bootstrap 5 HTML Template
 
 
                                         <h5>
-                                            <a href="mailto:info@company.com" class="footer-link">
+                                            <a href="mailto:tech@thenx.in" class="footer-link">
                                                 <i class="bi-envelope-fill contact-icon me-2"></i>
-                                                info@thenx.com
+                                                tech@thenx.in
                                             </a>
                                         </h5>
                                         
